changes letter spacing and fixes div

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,14 +11,10 @@ body {
   background-image:url('images/dirty_yellow.jpg');
   width: 500px;
   height: 100%;
-  position: absolute;
+  position: fixed;
   padding: 0px;
   margin: 0px;
   float: left;
-}
-
-#bottom-four {
-  letter-spacing: 10px;
 }
 
 .name {
@@ -32,6 +28,21 @@ body {
   font-family: helvetica;
   font-size: 130px;
   font-weight: 900;
-  letter-spacing: 5px;
   color: (0, 0, 0);
+}
+
+.name p:nth-child(1) {
+  letter-spacing: 5px;
+}
+
+.name p:nth-child(2) {
+  letter-spacing: 0px;
+}
+
+.name p:nth-child(3) {
+  letter-spacing: 5px;
+}
+
+.name p:nth-child(4) {
+  letter-spacing: 10px;
 }
